# otus-scoring-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  tests.py
.github/workflows/: github-actions.yml
src/otus_scoring_api/: api.py  classes.py  constants.py  handlers.py  scoring.py  store.py
tests/: conftest.py
tests/fixtures/: api.py  handlers.py  store.py
tests/integration/: test_api.py
tests/unit/: test_classes.py  test_handler.py  test_scoring.py  test_store.py
